--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
                }
           ]
      },
-     "icon": "logo.png",
+     "icon": "/images/logo.png",
      "repository": {
           "type": "git",
           "url": "https://github.com/AkmarNafi/midnight-code.git"
